--- a/pom.xml
+++ b/pom.xml
@@ -67,10 +67,21 @@
 			<artifactId>argon2-jvm</artifactId>
 			<version>2.11</version>
 		</dependency>
+		<!--minio-->
+		<dependency>
+			<groupId>io.minio</groupId>
+			<artifactId>minio</artifactId>
+			<version>8.5.9</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.github.thibaultmeyer</groupId>
+			<artifactId>cuid</artifactId>
+			<version>2.0.2</version>
 		</dependency>
 	</dependencies>
 
