--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -40,6 +40,6 @@ ws:
 #minio 配置
 minio:
   endpoint: http://192.168.63.187:9000
-  bucke-name: pic
+  bucket-name: pic
   access-key: minioadmin
   secret-key: minioadmin
