--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,3 +4,19 @@ on:
   push:
     branches:
       - main
+      
+jobs:
+  build-and-deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      # maven build
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+          cache: maven
+      - name: Build with Maven
+        run: mvn -B -DskipTests=true package --file pom.xml
+      
