--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,6 +7,7 @@ on:
       
 jobs:
   build-and-deploy:
+    name: Build & Deploy
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -19,4 +20,13 @@ jobs:
           cache: maven
       - name: Build with Maven
         run: mvn -B -DskipTests=true package --file pom.xml
-      
+      - name: Login to Aliyun Container Registry (ACR)
+        uses: aliyun/acr-login@v1
+        with:
+          login-server: https://registry.cn-hangzhou.aliyuncs.com
+          username: "${{ secrets.ACR_USERNAME }}"
+          password: "${{ secrets.ACR_PASSWORD }}"
+      - name: Build Docker Image
+        run: docker compose  -f ./docker/docker-compose.yml build
+      - name: Publish Docker Image
+        run: docker compose  -f ./docker/docker-compose.yml push
