--- a/docker/service/app/Dockerfile
+++ b/docker/service/app/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk:11-jre-bullseye
+FROM eclipse-temurin:11-jre
 WORKDIR /app
 COPY ./target/*.jar /app/c-talk.jar
 ENTRYPOINT ["java", "-jar", "/app/c-talk.jar"]
